# funbot

./: .env.example  .gitignore  CHANGELOG.md  main.py  pyproject.toml  release-please-config.json  renovate.json  ruff.toml  run.py
.github/workflows/: action-cats.yml  release-please.yml  todo-to-issue.yml
docs/: AI_RULES.md  README.md  bot-lifecycle.md  command-sync.md  components-v2.md  database-migrations.md  project-structure.md
funbot/: __init__.py  cache.py  config.py  constants.py  embeds.py  enums.py  exceptions.py  types.py
funbot/bot/: __init__.py  bot.py  command_tree.py  error_handler.py
funbot/cogs/: __init__.py  admin.py  pokemon.py
funbot/db/: __init__.py  aerich_config.py  config.py  database.py  utils.py
funbot/pokemon/: __init__.py  autocomplete.py  schemas.py  ui_utils.py
funbot/ui/: __init__.py  button.py  confirm.py  modal.py  paginator.py  toggle.py  view.py
funbot/utils/: __init__.py  logging.py  startup.py
migrations/models/: 0_20251213212449_init.py  10_20251214205731_add_ball_inventory.py  11_20251214234918_rename_player_badge_player_to_user.py  12_20251215192030_add_dungeon_trainer_and_run_models.py  1_20251214015529_add_pokemon_models.py  2_20251214141206_add_gym_dungeon_models.py  3_20251214143520_add_temporary_battle_models.py  4_20251214150006_change_health_to_bigint.py  5_20251214182656_rename_player_fk_to_user.py  5_20251214185109_add_pokeclicker_stats_fields.py  5_20251214190350_correct_evs_to_effort_points.py  8_20251214203420_add_vitamin_fields.py  (+3 more)
scripts/: import_pokemon_data.py
tests/: __init__.py  conftest.py
(+102 files in other folders)
